Layout bug in group results

--- a/css/flinkr.css
+++ b/css/flinkr.css
@@ -9,6 +9,18 @@ body{
 	font-weight: 300;
 }
 
+h2{
+	font-weight: normal;
+}
+
+h3{
+	font-weight: normal;
+}
+
+p{
+	font-weight: lighter;
+}
+
 a,
 a:visited{
 	color: #0063dc;
@@ -71,10 +83,10 @@ a:hover p{
 	position: absolute;
 	z-index: 100;
 	top: 100px;
-	right: 20px;
+	right: 16px;
 	pointer-events: none;
 	width: 20px;
-	height: 50px;
+	height: 55px;
 	background-image:
 		linear-gradient(
 			to right, 
@@ -228,6 +240,8 @@ a:hover p{
 }
 
 .containImg:hover img{
+	-ms-transform: scale(1.3,1.3);
+	-webkit-transform: scale(1.3,1.3);
 	transform: scale(1.3,1.3);
 	-webkit-box-shadow: 0px 0px 22px rgba(0,0,0,0,6);
 	-moz-box-shadow: 0px 0px 22px rgba(0,0,0,0.6);
